syntax = "proto2";

package nucrom;

//import "PseudorandomMechanic.proto"
//import "HeatMechanic.proto"
//import "VictoryMechanic.proto"
import "mechanics/Year.proto";

// GameSettings contains constants over the course of the game.
// These are not logged each turn, but merely copied to the top level GameState.
message GameSettings {
  //optional PseudorandomMechanicSettings pseudorandom_settings = 1;
  //optional HeatMechanicSettings heat_settings = 2;
  //optional VictoryMechanicSettings victory_settings = 3;
  optional YearMechanicSettings year_settings = 4;
}
